<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7 Minute Workout</string>
    <string name="app_label">Minute Workout</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- ActionBar menu -->
    <string name="menu_start_workout">Start workout</string>
    <string name="menu_about_app">About</string>

    <!-- Workout texts -->
    <string name="get_ready">Get Ready</string>
    <string name="rest">Rest</string>
    <string name="finished">You finished the workout!</string>

    <!-- About texts -->
    <string name="about_part1">The 7 Minute Workout originally appeared in the May/June 2013 issue of ACSM\'s Health and Fitness Journal. The workout consists of 12 high intensity body weight exercises. 30 seconds per exercise. 10 seconds rest between exercises.</string>
    <string name="about_part2">Remember to always check with your doctor before exercising and seek professional help to ensure correct form of the exercises.</string>
    <string name="about_part3">The workout videos from Youtube remain the owner\'s, please support them because they do amazing work making them available.</string>
    <string name="about_part4">Permissions Required: Internet</string>
    <string name="about_part5">This application requires the internet in order to play Youtube videos that describe each exercise. (The Youtube application needs to be installed in order to view these videos)</string>
    <string name="about_part6">This application requires the internet in order to use Crashlytics to collect data when and only when the application crashes. The data collected will help to identify the cause of the crash.</string>

    <!-- Workout Completed Screen Text -->
    <string name="congratulations">Congratulations!</string>
    <string name="you_did_it">You finished the workout!</string>

    <!-- Workout names -->
    <string name="jumping_jacks">Jumping jacks</string>
    <string name="wall_sits">Wall sits</string>
    <string name="push_ups">Push-ups</string>
    <string name="abdominal_crunches">Abdominal crunches</string>
    <string name="step_ups_onto_a_chair">Step-ups onto a chair</string>
    <string name="squats">Squats</string>
    <string name="triceps_dips_on_a_chair">Triceps dips on a chair</string>
    <string name="planks">Planks</string>
    <string name="high_knees_running_in_place">High knees running in place</string>
    <string name="lunges">Lunges</string>
    <string name="push_ups_and_rotations">Push-ups and rotations</string>
    <string name="side_planks">Side planks</string>

    <!-- Workout names with colons -->
    <string name="jumping_jacks_color">Jumping jacks:</string>
    <string name="wall_sits_colon">Wall sits:</string>
    <string name="push_ups_colon">Push-ups:</string>
    <string name="abdominal_crunches_colon">Abdominal crunches:</string>
    <string name="step_ups_onto_a_chair_colon">Step-ups onto a chair:</string>
    <string name="squats_colon">Squats:</string>
    <string name="triceps_dips_on_a_chair_colon">Triceps dips on a chair:</string>
    <string name="planks_colon">Planks:</string>
    <string name="high_knees_running_in_place_colon">High knees running in place:</string>
    <string name="lunges_colon">Lunges:</string>
    <string name="push_ups_and_rotations_colon">Push-ups and rotations:</string>
    <string name="side_planks_colon">Side planks:</string>
    <string name="high_knees_colon">High knees:</string>

    <!-- Workout description -->
    <string name="jumping_jacks_desc">Start with your feet together and arms at your sides. Slightly bend your knees and jump straight up. As you are jumping kick your legs out to shoulder width and bring your hands over your head to form a "star".</string>
    <string name="wall_sits_desc">Stand straight with your back against the wall with your legs shoulder width apart and a little away from the wall. Lower your hips until your legs are at right angles and then stand back up.</string>
    <string name="push_ups_desc">Lay flat on your stomach with your palms flat on the floor approximately shoulder width apart. Push up on your hands until your arms are straight. Lower yourself until your arms are at 90-degrees. Repeat.</string>
    <string name="abdominal_crunches_desc">A crunch begins with lying face up on the floor with knees bent. The movement begins by curling the shoulders towards the pelvis. The hands can be behind or beside the neck or crossed over the chest.</string>
    <string name="step_ups_onto_a_chair_desc">Stand in front of the step, with your feet about shoulder width apart. Step up onto the step with one foot, followed by the other. Pause and then step off with the opposite foot. Repeat.</string>
    <string name="squats_desc">Stand with your feet slightly wider than your hips and your toes pointed slightly out. Keeping your back straight lower your hips and bend your knees until you are parallel with the floor. Reverse until you are back in the original standing position.</string>
    <string name="triceps_dips_on_a_chair_desc">Sit with the heels of your hands on the edge of a sturdy chair seat. Slide your bottom off the seat, and support your weight with your hands. Bend your elbows back, and slowly lower your butt toward the floor while keeping your elbows tucked in.</string>
    <string name="planks_desc">Lay on your stomach and bend your elbows 90-degrees and rest your weight on your forearms. Your elbows should be directly beneath your shoulders, and your body should form a straight line from your head to your feet. Hold the position.</string>
    <string name="high_knees_running_in_place_desc">Run on the spot lifting your knees as high as possible, swing your arms as if you were running normally.</string>
    <string name="lunges_desc">Keep your upper body straight, with your shoulders back and relaxed and chin up. Step forward with one leg, lowering your hips until both knees are bent at about a 90-degree angle. Keep the weight in your heels as you push back up to the starting position.</string>
    <string name="push_ups_and_rotations_desc">Perform a push-up, at top rotate the body into side-plank position with one arm on ground and other extended toward ceiling. Rotate back to top of push-up position. Perform push-up and repeat rotation to opposite side.</string>
    <string name="side_planks_desc">Lay on your stomach and bend your elbows 90-degrees and rest your weight on your forearms (or hand if you prefer). Your elbows should be directly beneath your shoulders. Rotate 90-degrees so all your weight in on one forearm. Hold the position.</string>

    <!-- Workout video -->
    <string name="jumping_jacks_video">c4DAnQ6DtF8</string>
    <string name="wall_sits_video">y-wV4Venusw</string>
    <string name="push_ups_video">Eh00_rniF8E</string>
    <string name="abdominal_crunches_video">SHWgBc4Ahc8</string>
    <string name="step_ups_onto_a_chair_video">u-QwO-Bbaro</string>
    <string name="squats_video">p3g4wAsu0R4</string>
    <string name="triceps_dips_on_a_chair_video">nx9gVDCnT84</string>
    <string name="planks_video">pSHjTRCQxIw</string>
    <string name="high_knees_running_in_place_video">kMFv3Alg-Gc</string>
    <string name="lunges_video">m_RYVmpWDq4</string>
    <string name="push_ups_and_rotations_video">uGqZONsnZa8</string>
    <string name="side_planks_video">NXr4Fw8q60o</string>

    <string-array name="workout_names">
        <item>@string/jumping_jacks</item>
        <item>@string/wall_sits</item>
        <item>@string/push_ups</item>
        <item>@string/abdominal_crunches</item>
        <item>@string/step_ups_onto_a_chair</item>
        <item>@string/squats</item>
        <item>@string/triceps_dips_on_a_chair</item>
        <item>@string/planks</item>
        <item>@string/high_knees_running_in_place</item>
        <item>@string/lunges</item>
        <item>@string/push_ups_and_rotations</item>
        <item>@string/side_planks</item>
    </string-array>

    <string-array name="workout_descriptions">
        <item>@string/jumping_jacks_desc</item>
        <item>@string/wall_sits_desc</item>
        <item>@string/push_ups_desc</item>
        <item>@string/abdominal_crunches_desc</item>
        <item>@string/step_ups_onto_a_chair_desc</item>
        <item>@string/squats_desc</item>
        <item>@string/triceps_dips_on_a_chair_desc</item>
        <item>@string/planks_desc</item>
        <item>@string/high_knees_running_in_place_desc</item>
        <item>@string/lunges_desc</item>
        <item>@string/push_ups_and_rotations_desc</item>
        <item>@string/side_planks_desc</item>
    </string-array>

    <string-array name="workout_videos">
        <item>@string/jumping_jacks_video</item>
        <item>@string/wall_sits_video</item>
        <item>@string/push_ups_video</item>
        <item>@string/abdominal_crunches_video</item>
        <item>@string/step_ups_onto_a_chair_video</item>
        <item>@string/squats_video</item>
        <item>@string/triceps_dips_on_a_chair_video</item>
        <item>@string/planks_video</item>
        <item>@string/high_knees_running_in_place_video</item>
        <item>@string/lunges_video</item>
        <item>@string/push_ups_and_rotations_video</item>
        <item>@string/side_planks_video</item>
    </string-array>

    <!-- Statistics Boxes -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repText">Reps Completed: </string>
    <string name="avg_string">Average: </string>
    <string name="best_text">Personal Best: </string>
    <string name="is_completed">Completed: </string>
    <string name="completed_last">Previous: </string>
    <string name="workout_summary"><b>Workout Summary</b></string>
    <string name="high_knees">High knees</string>
    <string name="complete_percentage">Success Rate: </string>
    <string name="complete_workout">Complete Workout</string>

    <string name="resume">Resume</string>

</resources>
