<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:circularprogress="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workout_countdown"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal">

        <com.michaelcarrano.seven_min_workout.widget.CircularProgressBar
            android:id="@+id/workout_countdown_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            circularprogress:bgColor="#000"
            circularprogress:bgStrokeWidth="10dp"
            circularprogress:diameter="180dp"
            circularprogress:progressColor="#64b9ee"
            circularprogress:progressStrokeWidth="8dp"
            circularprogress:showText="true"
            tools:visibility="visible" />

        <com.ohoussein.playpause.PlayPauseView
            android:id="@+id/play_pause_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            app:fill_color="@color/light_gray"
            app:pause_bg="@color/stop_sign_red"
            app:play_bg="@color/fab" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/stats_background"
        android:focusable="false"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/lastExerciseTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/repExerciseStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/repCompLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repText"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/repsCompletedPlainText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/all_stats_text_background"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/workoutInfoStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bestTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/best_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/bestStatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/completedLastTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/completed_last"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/completedLastStatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/avgTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/avg_string"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/avgStatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeExerciseStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/completedCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/isCompletedCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/is_completed"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/completePercentageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/complete_percentage"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/completePercentageStatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/workout_countdown_info_container"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/workout_countdown_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="layoutClicked"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/workout_countdown_id"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical|center_horizontal"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/workout_countdown_name"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="6"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/high_knees_running_in_place"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>